[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menu/pack_select.gd" type="Script" id=2]
[ext_resource path="res://src/ui/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/editor/delete_warning.tscn" type="PackedScene" id=4]

[node name="pack_select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="back" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 48.0
text = "back"

[node name="select_pack_label" type="Label" parent="."]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 80.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "select pack"
align = 1
valign = 1

[node name="pack_container" type="ScrollContainer" parent="."]
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 648.0
theme = ExtResource( 1 )

[node name="pack_list" type="VBoxContainer" parent="pack_container"]
custom_constants/separation = 16

[node name="switch_button" type="Button" parent="."]
margin_left = 1176.0
margin_top = 8.0
margin_right = 1272.0
margin_bottom = 48.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )

[node name="new" type="Button" parent="."]
margin_left = 592.0
margin_top = 664.0
margin_right = 688.0
margin_bottom = 704.0
focus_mode = 0
mouse_default_cursor_shape = 2
text = "new"

[node name="confirm" parent="." instance=ExtResource( 4 )]

[connection signal="tree_entered" from="." to="." method="_on_pack_select_tree_entered"]
[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="switch_button" to="." method="_on_switch_button_button_up"]
[connection signal="button_up" from="new" to="." method="_on_new_button_up"]
